--- a/university_example/app/assets/stylesheets/application.css
+++ b/university_example/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+.grade-table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.grade-table td, .grade-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.grade-table tr:nth-child(even){background-color: #f2f2f2;}
+
+.grade-table tr:hover {background-color: #ddd;}
+
+.grade-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
